--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,9 @@ body {
  height: 50px;	
  overflow: hidden;
  position: relative;
- background: yellow;
- color: orange;
- border: 1px solid orange;
+ background: blue;
+ color: green;
+ border: 1px solid green;
 }
 .moveit p {
  position: absolute;
